css/main.css
/* ... */
.razorops-client{
  background-color: #efefef;
  padding: 30px;
}
.razorops-clients{
  color: #000;
  text-align: center;
  font-weight: 300;
  font-size: 30px;
  margin-top: 20px;
}

.razopops-clients-img{
    padding: 5px;
    width: 300px;
    height: auto;
    margin-top: 20px;
}

.team-card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  max-width: 300px;
  margin: auto;
  text-align: center;
  padding-bottom: 20px;
  margin-bottom: 20px;
}

.team-title {
  color: grey;
  font-size: 18px;
}

button {
  border: none;
  outline: 0;
  display: inline-block;
  padding: 8px;
  color: white;
  background-color: #000;
  text-align: center;
  cursor: pointer;
  width: 100% !important;
  font-size: 18px;
}

a {
  text-decoration: none;
  color: black;
}


@media (max-width: 767px) {
	.banner-msg {
		position: relative;
		padding: 30px 0;
		width: 100%;
		margin-top: -100px;
	}
	button {
		border: none;
		outline: 0;
		display: inline-block;
		padding: 8px;
		color: white;
		background-color: #000;
		text-align: center;
		cursor: pointer;
		width: 20% !important;
		font-size: 18px;
	}
	.banner {
		padding: 60px 30px;
		text-align: center;
	}
	.banner-msg h1 {
		font-size: 3.5em;
	}
	.banner-illustration {
		display: none;
	}
	.banner-msg p {
		font-size: 19px;
	}
	.banner-actions .btn {
		display: block;
		width: 100% !important;
		max-width: 300px;
		margin: 0 auto 15px;
	}

	.signup-section{
		text-align: center !important;
	}

	.mobile{
		width: 60% !important;
	}
}
/*------how-it-works----*/
.how-it-works {
	background-color: #f2fcfb;
	padding: 50px 0;
	margin-bottom: -50px;
}
.steps-wraper {
	position: relative;
	max-width: 700px;
	margin: 50px auto;
}
.steps-connecter {
	position: absolute;
	height: 97%;
	top: 10px;
	bottom: 0;
	left: 50%;
	border: 2px dashed #313ee7;
}
.step-item {
	position: relative;
	z-index: 1;
}
.step-img {
	text-align: center;
}
.step-img img {
	max-width: 680px;
	height: 150px;
}
.step-4 .step-img img {
	width: 220px;
	height: 200px;
}
.step-2 .step-img img {
	width: 300px;
	height: auto;
}
.step-msg {
	position: relative;
	padding: 50px 0 50px 40px;
	width: 50%;
	margin-left: auto;
}
.step-dot {
	display: inline-block;
	position: absolute;
	top: 60px;
	left: -8px;
	width: 20px;
	height: 20px;
	background-color: #28e180;
	border-radius: 50%;
}
@media (max-width: 767px) {
	.step-img img {
		display: block;
		max-width: 100%;
		height: auto;
		margin: 0 auto;
	}
	.content-wraper {
		margin-top: 60px;
	}
}
/*---features----*/
.feature-img{
	/*-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
  /*filter: grayscale(100%);*/
}

.feature-img:hover {
  filter: none;
  -webkit-filter: grayscale(0%);
}

.features {
	padding: 30px 50px;
	/*background-color: #340068;*/
	background-color: #FFF;
	/*background: rgb(32,23,175);*/
	margin-bottom: -90px;
  /*background: linear-gradient(180deg, rgba(32,23,175,1) 0%, rgba(113,8,232,1) 67%, rgba(178,46,209,1) 100%);*/
}
.features .section-header h2 {
	color: #000;
}
.features .section-header {
	margin-bottom: 65px;
}
.features .section-header::before {
	background-color: #fff;
}
.feature-item {
	/*padding: 10px 10px 10px 80px;*/
	margin-bottom: 30px;
	/*max-width: 450px;*/
}
.feature-item h4 {
	font-weight: 700;
	margin-top: 0;
	color: #000;
}
.feature-item p {
	font-size: 16px;
	color: #000;
}
.feature-item figure {
	position: absolute;
	top: 15px;
	left: 0;
	display: block;
	/*width: 80px;*/
	/*height: 80px;*/
	text-align: center;
}
.feature-item figure img {
	display: inline-block;
	/*width: 60px;*/
	height: auto;
}

.feature-item-img{
	width: 70%;
	text-align: center;
}


.header {
	position: relative;
	font-size: 36px;
	font-weight: 700;
	text-align: center;
	margin-bottom: 80px;
}
.header::after {
	content: '';
	position: absolute;
	bottom: -15px;
	left: 0;
	right: 0;
	width: 60px;
	height: 4px;
	margin: 0 auto;
	background-color: #5449D2;
}


.product-screens{
	background-color: #FFF;
}

.showcase .showcase-text {
  padding: 7rem;
}

.showcase .showcase-img {
  min-height: 40.5rem;
  background-size: contain;
}

@media (min-width: 768px) {
  .showcase .showcase-text {
    padding: 7rem;
  }
}



.home-feature{
	background-color: #FFF;
	padding: 10px 0;
	/*margin-top: -10px;*/
}

.home-feature img {
	max-width: 30%;
	height: auto;
}

.home-deployment{
	background-color: #f3f5f9;
	padding: 10px 0;
	margin-top: -28px;
	margin-bottom: 50px;
}


.home-deployment img {
	max-width: 30%;
	height: auto;
}

.platform-integrations img {
	max-width: 30%;
	height: auto;
}

.platform-integration-msg {
	padding-top: 10px;
	text-align: center;
}

.integrations {
	background-color: #f3f5f9;
  padding: 100px 0;
  margin-bottom: -60px;
}
.integration-illustration img {
	max-width: 100%;
	height: auto;
}
.integration-msg {
	padding-top: 150px;
	padding-left: 50px;
}

.tag-line{
	color: #FFF;
	background-color: #4e91ff;
	background-image: linear-gradient(135deg, #4e91ff 0%, #141de4 100%);
}
.center {
	text-align: center;
}
.non-h1-margin{
	margin-top: 0px !important;
}

/*-----docs----*/
.content-wraper {
	padding-top: 50px;
}
.docs-wraper {
	position: relative;
	min-height: calc(100vh - 390px);
}
.docs-sidebar-sticky,
.table-contents-sticky {
	position: fixed;
	top: 70px;
	height: 100%;
	overflow-y: auto;
}
@media (min-width: 1200px) {
	.docs-sidebar-sticky {
		width: 220px;
	}
	.table-contents-sticky {
		width: 200px;
	}
}
.docs-nav {
	list-style: none;
	padding: 0;
	margin: 0;
}
.docs-nav > li {
	display: block;
	width: 100%;
}
.docs-nav > li > a {
	display: block;
	margin-top: .625em;
	font-size: 16px;
	color: #464646;
	width: 100%;
	word-wrap: break-word;
	text-decoration: none;
}
.docs-nav > li > a:hover,
.docs-nav > li > a:focus {
	color: #313ee7;
}
.docs-nav > li h4 {
	color: #222;
	margin-top: 0;
	margin: 10px 0;
	font-size: 1.2em;
}


.razorops-ci-cd{
	padding: 30px 0;
	text-align: center;
}

.razorops-ci-cd h1 {
	margin-top: -20px;
	}
/* ... */

